--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "MLX42"]
 	path = MLX42
 	url = git@github.com:codam-coding-college/MLX42.git
+[submodule "Libft"]
+	path = Libft
+	url = git@github.com:samreerink/Libft.git
